# GoWe

./: .env.example  .gitignore  .goreleaser.yaml  CHANGELOG.md  CLAUDE.md  CONFORMANCE.md  CONTRIBUTING.md  Dockerfile  Dockerfile.cwl-runner  Dockerfile.worker  Makefile  README.md  SPECIFICATION-13.6-13.7-tls.patch  SPECIFICATION.md  conformance-results-cwlrunner-20260405-203838.txt  conformance-results-server-local-20260406-100617.txt  conformance-results-server-worker-20260406-120946.txt  docker-compose.test.yml  docker-compose.yml  go.mod  go.sum  release-please-config.json  scratchpad.md
.github/: copilot-instructions.md
configs/: README.md  credentials.example.yaml  server.example.yaml  worker.example.yaml
cwl/: REPORT.md  VERIFICATION.md  app_outputs.yaml
docs/: API_GUIDE.md  Airflow-BVBRC-Provider-Plan.md  BVBRC-API.md  BVBRC-App-Output-Convention.md  BVBRC-App-Specs-Summary.md  BVBRC-Workspace-Deep-Dive.md  CWL-Specs.md  Execution-Modes.md  GoWe-Implementation-Plan.md  GoWe-Vocabulary.md  PRODUCTION.md  ProteinFoldingApp-Feasibility.md  ProteinFoldingApp-Setup-Guide.md  Remote-Worker-Analysis.md  STATUS.md  Workflow-Engines-Comparison.md  architecture-dossier.html  conformance-gap-analysis.md  conformance-test-report-2026-03-30.md  conformance-test-report-2026-04-04.md  cookbook.md  cwl-hints.md  planned-config.md  quickstart-apptainer.md  quickstart-local.md  tutorial.md
mcp-servers/: .gitignore  SETUP.md
mcp-servers/python/: Dockerfile  README.md  pyproject.toml
mcp-servers/python/src/bvbrc_mcp/: __init__.py  __main__.py  client.py  server.py
(+448 files in other folders)
