[project]
name = "bvbrc-mcp"
version = "0.1.0"
description = "MCP server for BV-BRC bioinformatics services"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
bvbrc-mcp = "bvbrc_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bvbrc_mcp"]
